--- a/app/views/produtos/produtos.ejs
+++ b/app/views/produtos/produtos.ejs
@@ -8,5 +8,24 @@
 </head>
 <body>
   <h1>Teste</h1>
+  <table>
+    <tbody>
+      <tr>
+        <td>ID</td>
+        <td>Nome</td>
+        <td>Descrição</td>
+      </tr>
+
+      <% for(var i = 0; i < produtos.length; i++) { %>
+        <tr>
+          <td>1<%= produtos[i].id_produto %></td>
+          <td><%= produtos[i].nome %></td>
+          <td><%= produtos[i].descricao %></td>
+        </tr>
+      <% } %>
+    </tbody>
+  </table>
+  <script>
+  </script>
 </body>
 </html>
